--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "pg": "^8.10.0"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0"
   }
 }
